--- a/TEMPLATE/README.html
+++ b/TEMPLATE/README.html
@@ -76,7 +76,7 @@ $CPGRESULTTYPEDEF
           </code></pre>
         </dd>
         <dd>
-             and C variable declarations:
+             and C variable declarations, where matrix parameters and variables are stored in vectorized form:
         </dd>
         <dd>
           <pre><code><!-- language: lang-c -->
@@ -106,7 +106,6 @@ $CPGVARIABLEDECLARATIONS
 // Struct containing user-defined objective value and solution
 CPG_Result_t CPG_Result;
           </code></pre>
-        </dd>
         </dd>
       <dt><code>include/cpg_solve.h</code> contains function prototypes:</dt>
         <dd>
