Updated README.{md, html}

--- a/TEMPLATE/README.html
+++ b/TEMPLATE/README.html
@@ -185,7 +185,7 @@ print(prob.var_dict['&lt;v_name&gt;'].value)
   </p>
 
   <p>
-    To compile the example executable, run the following:
+    To compile the example executable on a Unix platform, run the following:
   </p>
     <pre><code>
 cd $CODEDIR/c/build
