--- a/TEMPLATE/README.html
+++ b/TEMPLATE/README.html
@@ -46,6 +46,8 @@ $CODEDIR
     setup.py
     cpg_solver.py
     problem.pickle
+    LICENSE
+    README.html
   </code></pre>
   <p>
       The <code>c/solver_code</code> subdirectory contains all code produced by the code generation feature of the chosen
@@ -63,19 +65,12 @@ $CODEDIR
         <dd>
           <pre><code><!-- language: lang-c -->
 $CPGBASICTYPEDEF
+$CPGUSERPARAMSTYPEDEF
 $CPGCANONPARAMSTYPEDEF
 $CPGOUTDATEDTYPEDEF
-$CPGUSERPARAMSTYPEDEF
-// Struct containing solver info
-typedef struct {
-    c_float     obj_val;         ///< Objective function value
-    c_int       iter;            ///< Number of iterations
-    c_int       status;          ///< Solver status
-    c_float     pri_res;         ///< Primal residual
-    c_float     dua_res;         ///< Dual residual
-} CPG_Info_t;
-
+$CPGINFOTYPEDEF
 $CPGRESULTTYPEDEF
+$CPGSETTINGSTYPEDEF
           </code></pre>
         </dd>
         <dd>
@@ -83,44 +78,26 @@ $CPGRESULTTYPEDEF
         </dd>
         <dd>
           <pre><code><!-- language: lang-c -->
-$CPGEXTRADECLARATIONS
-// Struct containing flags for outdated canonical parameters
-Canon_Outdated_t Canon_Outdated;
-
-$CPGCANONPARAMDECLARATIONS
-$CPGCANONPARAMSTRUCTDECLARATIONS
 $CPGPARAMDECLARATIONS
+$CPGCANONPARAMDECLARATIONS
+$CPGCANONOUTDATEDDECLARATION
 $CPGVARIABLEDECLARATIONS
-// Struct containing solver info
-CPG_Info_t CPG_Info;
-
-// Struct containing user-defined objective value and solution
-CPG_Result_t CPG_Result;
+$CPGINFORESULTDECLARATION
+$CPGEXTRADECLARATIONS
           </code></pre>
         </dd>
       <dt><code>c/include/cpg_solve.h</code> contains function prototypes:</dt>
         <dd>
           <pre><code><!-- language: lang-c -->
-$CPGCANONICALIZEDECLARATIONS
-// retrieve solution in terms of user-defined variables
-void retrieve_solution();
-
-// retrieve solver info
-void retrieve_info();
-
-// perform one ASA sequence to solve a problem instance
-void solve();
-
 $CPGUPDATEDECLARATIONS
-// update solver settings
-void set_solver_default_settings();
-void set_solver_&lt;setting_name&gt;(&lt;setting_type&gt; &lt;setting_value&gt;);
-...
+$CPGCANONICALIZEDECLARATIONS
+$CPGRETRIEVESOLVEDECLARATIONS
+$CPGSETTINGSDECLARATIONS
           </code></pre>
         </dd>
         <dd>
-            where <code>&lt;setting_name&gt;</code>, <code>&lt;setting_type&gt;</code>, and <code>&lt;setting_value&gt;</code> are
-            the name, type, and value of the solver setting to be updated, respectively.
+            where <code>&lt;setting_name&gt;</code> and <code>&lt;setting_type&gt;</code> are
+            the name and type of the solver setting to be updated, respectively.
         </dd>
       <dt><code>c/src/cpg_workspace.c</code> contains the static allocation of the C variables declared in <code>include/cpg_workspace.h</code>.</dt>
       <dt><code>c/src/cpg_solve.c</code> contains the definition of functions declared in <code>include/cpg_solve.h</code>.</dt>
@@ -165,14 +142,15 @@ print(prob.var_dict['&lt;v_name&gt;'].value)
     <pre><code>
 cd $CODEDIR/c/build
 cmake ..
-make
+cmake --build . --target cpg_example
     </code></pre>
 
   <p>
     To run the example executable, type:
   </p>
     <pre><code>
-$CODEDIR/c/build/cpg_example
+cd $CODEDIR/c/build
+./cpg_example
     </code></pre>
 
   <h4>Existing Project</h4>
@@ -193,12 +171,14 @@ $CODEDIR/c/solver_code/
   </p>
     <pre><code>
 add_subdirectory(&lt;subdir&gt;)
-include_directories(&lt;existing_dirs&gt; ${cpg_include})
+include_directories(&lt;existing_dirs&gt; ${$CPGCMAKELISTS_include})
     </code></pre>
   <p>
-      where <code>&lt;existing_dirs&gt;</code> is your existing include directories and <code>${cpg_include}</code> lists
-      the include directories used by the generated code. Add <code>${cpg_head}</code> and
-      <code>${cpg_src}</code> to all targets that use the generated code.
+      where <code>&lt;existing_dirs&gt;</code> is your existing include directories and <code>${$CPGCMAKELISTS_include}</code> lists
+      the include directories used by the generated code. Add <code>${$CPGCMAKELISTS_head}</code> and
+      <code>${$CPGCMAKELISTS_src}</code> to all targets that use the generated code.
+
+
   </p>
 
 </body>
