Retrieving dual solution.

--- a/TEMPLATE/README.html
+++ b/TEMPLATE/README.html
@@ -65,6 +65,8 @@ $CODEDIR
       The following types are part of the C interface:</dt>
         <dd>
           <pre><code><!-- language: lang-c -->
+$CPGPRIMTYPEDEF
+$CPGDUALTYPEDEF
 $CPGINFOTYPEDEF
 $CPGRESULTTYPEDEF
           </code></pre>
