--- a/template/README.html
+++ b/template/README.html
@@ -165,21 +165,30 @@ print(prob.var_dict['&lt;v_name&gt;'].value)
   </p>
 
   <h4>Example Executable</h4>
-
   <p>
-    To compile the example executable on a Unix platform, run the following:
+    Before compiling the example executable, remember to activate the <code>cpg_env</code> environment.
+  </p>
+    <pre><code>
+conda activate cpg_env
+    </code></pre>
+  <p>
+    On Unix platforms, run the following commands in your terminal to compile and run the program:
   </p>
     <pre><code>
 cd $CODEDIR/c/build
 cmake ..
 cmake --build . --target cpg_example
+./cpg_example
     </code></pre>
 
   <p>
-    To run the example executable, type:
+    On Windows, type:
   </p>
     <pre><code>
-./cpg_example
+cd $CODEDIR\c\build
+cmake ..
+cmake --build . --target cpg_example --config release
+Release\cpg_example
     </code></pre>
 
   <h4>Existing C/C++ Project</h4>
