--- a/cvxpygen/template/README.html
+++ b/cvxpygen/template/README.html
@@ -66,6 +66,64 @@ $PRIMALS
 $DUALS
   </table>
   </div>
+  <h3>Using Generated Code</h3>
+
+  <h4>CVXPY</h4>
+
+  <p>
+      To use the CVXPY interface after generating code for <code>problem</code>, simply run
+  </p>
+    <pre><code>
+problem.solve(method='CPG')
+    </code></pre>
+
+  <h4>Example Executable</h4>
+  <p>
+    On Unix platforms, run the following commands in your terminal to compile and run the program:
+  </p>
+    <pre><code>
+cd $CODEDIR/c/build
+cmake ..
+cmake --build . --target cpg_example
+./cpg_example
+    </code></pre>
+
+  <p>
+    On Windows, type:
+  </p>
+    <pre><code>
+cd $CODEDIR\c\build
+cmake ..
+cmake --build . --target cpg_example --config release
+Release\cpg_example
+    </code></pre>
+
+  <h4>Existing C/C++ Project</h4>
+
+  <p>
+    To use the generated code in an existing <code>CMake</code> project, copy the following to a subdirectory <code>&lt;subdir&gt;</code>
+      of your project:
+  </p>
+    <pre><code>
+$CODEDIR/c/CMakeLists.txt
+$CODEDIR/c/src/
+$CODEDIR/c/include/
+$CODEDIR/c/solver_code/
+    </code></pre>
+
+  <p>
+    In your top-level <code>CMakeLists.txt</code>, add the subdirectory via
+  </p>
+    <pre><code>
+add_subdirectory(&lt;subdir&gt;)
+include_directories(&lt;existing_dirs&gt; ${$CPGCMAKELISTS_include})
+    </code></pre>
+  <p>
+      where <code>&lt;existing_dirs&gt;</code> is your existing include directories and <code>${$CPGCMAKELISTS_include}</code> lists
+      the include directories used by the generated code. Add <code>${$CPGCMAKELISTS_head}</code> and
+      <code>${$CPGCMAKELISTS_src}</code> to all targets that use the generated code.
+      If not needed, you can remove the <code>cpg_example</code> and <code>cpg</code> targets from <code>$CODEDIR/c/CMakeLists.txt</code>.
+  </p>
   <h3>File Tree</h3>
   <p>
     Your generated code is structured as follows inside your chosen <code>$CODEDIR</code> directory:
@@ -137,85 +195,6 @@ $CPGSETTINGSDECLARATIONS
       <dt><code>cpg_solver.py</code> contains a custom CVXPY solve method that uses the python wrapper to solve your problem.</dt>
       <dt>Finally, <code>problem.pickle</code> is the serialized version of your CVXPY problem object.</dt>
     </dl>
-  </p>
-
-  <h3>Using Generated Code</h3>
-
-  <h4>CVXPY</h4>
-
-  <p>
-      To use the CVXPY interface, run exemplarily,
-  </p>
-    <pre><code>
-import pickle
-from $CDPYTHON.cpg_solver import cpg_solve
-
-with open('$CODEDIR/problem.pickle', 'rb') as f:
-    prob = pickle.load(f)
-
-prob.param_dict['&lt;p_name&gt;'].value = &lt;p_value&gt;
-prob.register_solve('CPG', cpg_solve)
-
-obj = prob.solve(method='CPG')
-print(prob.var_dict['&lt;v_name&gt;'].value)
-    </code></pre>
-  <p>where <code>&lt;p_name&gt;</code> and <code>&lt;p_value&gt;</code> are parameter name and value, respectively.
-  After registering <code>&lt;cpg_solve&gt;</code> as custom solve method, the problem can be solved and the objective value
-  <code>obj</code> and solution in terms of variable <code>&lt;v_name&gt;</code> can be inspected.
-  </p>
-
-  <h4>Example Executable</h4>
-  <p>
-    Before compiling the example executable, remember to activate the <code>cpg_env</code> environment.
-  </p>
-    <pre><code>
-conda activate cpg_env
-    </code></pre>
-  <p>
-    On Unix platforms, run the following commands in your terminal to compile and run the program:
-  </p>
-    <pre><code>
-cd $CODEDIR/c/build
-cmake ..
-cmake --build . --target cpg_example
-./cpg_example
-    </code></pre>
-
-  <p>
-    On Windows, type:
-  </p>
-    <pre><code>
-cd $CODEDIR\c\build
-cmake ..
-cmake --build . --target cpg_example --config release
-Release\cpg_example
-    </code></pre>
-
-  <h4>Existing C/C++ Project</h4>
-
-  <p>
-    To use the generated code in an existing <code>CMake</code> project, copy the following to a subdirectory <code>&lt;subdir&gt;</code>
-      of your project:
-  </p>
-    <pre><code>
-$CODEDIR/c/CMakeLists.txt
-$CODEDIR/c/src/
-$CODEDIR/c/include/
-$CODEDIR/c/solver_code/
-    </code></pre>
-
-  <p>
-    In your top-level <code>CMakeLists.txt</code>, add the subdirectory via
-  </p>
-    <pre><code>
-add_subdirectory(&lt;subdir&gt;)
-include_directories(&lt;existing_dirs&gt; ${$CPGCMAKELISTS_include})
-    </code></pre>
-  <p>
-      where <code>&lt;existing_dirs&gt;</code> is your existing include directories and <code>${$CPGCMAKELISTS_include}</code> lists
-      the include directories used by the generated code. Add <code>${$CPGCMAKELISTS_head}</code> and
-      <code>${$CPGCMAKELISTS_src}</code> to all targets that use the generated code.
-      If not needed, you can remove the <code>cpg_example</code> and <code>cpg</code> targets from <code>$CODEDIR/c/CMakeLists.txt</code>.
   </p>
 
 </body>
