Replace `pickle` with `dill` for serialization

--- a/cvxpygen/template/README.html
+++ b/cvxpygen/template/README.html
@@ -147,7 +147,7 @@ $CPGSETTINGSDECLARATIONS
       To use the CVXPY interface, run exemplarily,
   </p>
     <pre><code>
-import pickle
+import dill as pickle
 from $CDPYTHON.cpg_solver import cpg_solve
 
 with open('$CODEDIR/problem.pickle', 'rb') as f:
